--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -10,7 +10,7 @@
 
     <form class="form new-blog-form">
       <div class="form-group">
-        <label for="blog-name">blog name:</label>
+        <label for="blog-title">blog <title></title>:</label>
         <input class="form-input" type="text" id="blog-name" name="blog-name" />
       </div>
       <div class="form-group">
